--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation 'com.openai:openai-java:0.23.1'
+	implementation 'org.apache.pdfbox:pdfbox:3.0.4'
 }
 
 tasks.named('test') {
