--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,8 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.7'
 }
 
-group = 'com.spec2test'
-version = '0.0.1-SNAPSHOT'
+group = 'com.reqflowly'
+version = '1.0.0'
 
 java {
 	toolchain {
@@ -14,7 +14,8 @@ java {
 }
 
 jar {
-	enabled = false
+	archiveBaseName = 'reqflowly-app'
+	archiveVersion = '1.0.0'
 }
 
 
@@ -29,17 +30,37 @@ repositories {
 }
 
 dependencies {
+	// Starters
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
-	implementation 'com.google.firebase:firebase-admin:9.4.3'
-	implementation 'org.liquibase:liquibase-core'
-	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'org.postgresql:postgresql'
-	annotationProcessor 'org.projectlombok:lombok'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	// Liquibase
+	implementation 'org.liquibase:liquibase-core'
+
+	// Firebase
+	implementation 'com.google.firebase:firebase-admin:9.4.3'
+
+	// Database
+	runtimeOnly 'org.postgresql:postgresql'
+
+	// Mapping
+	implementation 'org.mapstruct:mapstruct:1.6.3'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
+
+	// Lombok
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+
+	// Test
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	// OpenAI
 	implementation 'com.openai:openai-java:0.23.1'
+
+
 	implementation ('org.apache.pdfbox:pdfbox:3.0.4') {
 		exclude group: 'commons-logging', module: 'commons-logging'
 	}
