--- a/build.gradle
+++ b/build.gradle
@@ -60,11 +60,25 @@ dependencies {
 	// OpenAI
 	implementation 'com.openai:openai-java:0.23.1'
 
+	// Markdown processor
+	implementation 'com.vladsch.flexmark:flexmark-all:0.64.8'
 
-	implementation ('org.apache.pdfbox:pdfbox:3.0.4') {
-		exclude group: 'commons-logging', module: 'commons-logging'
-	}
+	// PDF export
+	implementation("org.springframework.boot:spring-boot-starter-thymeleaf")
+	
+	// Flying Saucer and iText for PDF generation
+	implementation 'org.xhtmlrenderer:flying-saucer-pdf:9.3.1'
+	implementation 'org.xhtmlrenderer:flying-saucer-core:9.3.1'
+	implementation 'com.itextpdf:itextpdf:5.5.13.3'
+	implementation 'org.xhtmlrenderer:flying-saucer-pdf-openpdf:9.3.1'
 
+	// For PDF reading/parsing
+	implementation 'org.apache.pdfbox:pdfbox:3.0.4'
+
+	// Vertex AI dependencies
+	implementation platform("com.google.cloud:google-cloud-vertexai-bom:1.22.0")
+	implementation "com.google.cloud:google-cloud-vertexai"
+	implementation "com.google.genai:google-genai:0.7.0"
 }
 
 tasks.named('test') {
