--- a/build.gradle
+++ b/build.gradle
@@ -60,9 +60,12 @@ dependencies {
 	// OpenAI
 	implementation 'com.openai:openai-java:0.23.1'
 
-	// Vertex AI dependencies
-	implementation platform("com.google.cloud:google-cloud-vertexai-bom:1.22.0")
-	implementation "com.google.cloud:google-cloud-vertexai"
+	// Vertex AI
+	implementation platform('com.google.cloud:google-cloud-vertexai-bom:1.22.0')
+	implementation('com.google.cloud:google-cloud-vertexai') {
+		exclude group: 'io.netty', module: 'netty-tcnative-boringssl-static'
+	}
+	implementation 'io.netty:netty-tcnative-boringssl-static:2.0.62.Final'
 }
 
 tasks.named('test') {
